Seção about us finalizada

--- a/Index.html
+++ b/Index.html
@@ -176,20 +176,29 @@
                 <div class="abaut-text">
                     <!--========== COMPONENTES TITULOS CATEGORIAS =================-->
                     <div class="bar-title-categories"></div>
-                    <p class="title-section">Abaut Us</p>
+                    <p class="title-section">About Us</p>
                     <!--========== COMPONENTES TITULOS CATEGORIAS =================-->
                     <h2>Why will you chosse our?</h2>
                     <p>Text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard Lorem Ipsum has been the industry's standard.</p>
                     <div class="about-contador">
                         <div class="about-content-85">
-                            <div class="circle">.</div>
-                            <p>Business strategy growth</p>
+                            <div class="circle">
+                                <div class="cicle-int">85%</div>
+                            </div>
+                            <p><b>Business</b><br>strategy growth</p>
+                        </div>
+                        <div class="about-content-85">
+                            <div class="circle">
+                                <div class="cicle-int">75%</div>
+                            </div>
+                            <p><b>Finace</b><br>Valuble ideas</p>
                         </div>
                     </div>
                 </div>
                 <div class="about-image">
-                    ...
+                    <div class="box-10years"><i class="fa fa-plus" aria-hidden="true"></i><span class="years">10</span><br><span class="text-years">years off experiences</span></div>
+                    <img src="assets/image/about-work.jpg" width="320px">
                 </div>
             </div>
         </div>
