Criando arquivo css get

--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/features.css">
     <link rel="stylesheet" type="text/css" href="assets/css/aboutus.css">
     <link rel="stylesheet" type="text/css" href="assets/css/projects.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/get.css">
 
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
@@ -300,6 +301,27 @@
                 </div>
             </div>
             <div class="swiper-pagination"></div>
+            </div>
+        </div>
+    </section>
+    <section id="getInTouch">
+        <div class="container column">
+            <div class="get-text">
+                <div class="get-title">
+                    <!--========== COMPONENTES TITULOS CATEGORIAS =================-->
+                    <p class="title-section">Get in Touch</p>
+                    <!--========== COMPONENTES TITULOS CATEGORIAS =================-->
+                    <h2>We are Connected All Time to Help Your Business!</h2>
+                    <div class="image-get">
+                        <img src="">
+                    </div>
+                </div>
+                <div class="get-text">
+                    <p>Lorem Ipsum is simply dummy text industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+                </div>
+            </div>
+            <div class="get-content">
+                ...
             </div>
         </div>
     </section>
