--- a/Index.html
+++ b/Index.html
@@ -23,13 +23,13 @@
     <style>
         .swiper {
           width: 100%;
-          height: 100%;
+          height: 70%;
         }
   
         .swiper-slide {
           text-align: center;
           font-size: 18px;
-          background: #fff;
+          /*background: #fff;*/
           position: relative;
           overflow: hidden;
   
@@ -260,7 +260,7 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <a href="#" class="button-default">Get in touch &ensp;<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
-                        <img src="assets/image/about-work.jpg">
+                        <img src="assets/image/image project.jpg">
                         <div class="title-img-slide">
                             <h3>Investiment Polky</h3>
                             <span>Investiment Polky</span>
@@ -316,12 +316,99 @@
                         <img src="">
                     </div>
                 </div>
-                <div class="get-text">
+                <div class="get-text column">
                     <p>Lorem Ipsum is simply dummy text industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+                    <h2>Book na Appionment</h2>
+                    <form id="formulario" method="post">
+                        <span class="content-info">
+                            <p>
+                                <label>Nome:</label><br>
+                                <input type="text" name="nome" placeholder="Primeiro nome" required>
+                            </p>
+                            <p>
+                                <label>Email:</label><br>
+                                <input type="email" name="email" placeholder="exemplo@exemplo.com" required>
+                            </p>
+                        </span><br>
+                        <label>Como podemos ajuda-lo?</label><br>
+                        <textarea name="menssager" rows="4" placeholder="Mensagem"></textarea><br><br>
+                        <input type="submit" value="Enviar">
+                    </form>
                 </div>
             </div>
-            <div class="get-content">
-                ...
+            <div class="get-content--main">
+                <h3>Main Branch</h3>
+                <div class="content-main--options">
+                    <div class="main-options">
+                        <h4>(There are many sure)</h4>
+                        <ul>
+                            <li>There are many varia</li>
+                            <li>Need to be sure</li>
+                            <li>Combined with</li>
+                            <li>There are many varia</li>
+                        </ul>
+                    </div>
+                    <div class="main-options">
+                        <h4>There are many</h4>
+                        <ul>
+                            <li>There are many varia</li>
+                            <li>Need to be sure</li>
+                            <li>Combined with</li>
+                            <li>There are many varia</li>
+                        </ul>
+                    </div>
+                    <div class="main-options">
+                        <h4>Combined with</h4>
+                        <ul>
+                            <li>There are many varia</li>
+                            <li>Need to be sure</li>
+                            <li>Combined with</li>
+                            <li>There are many varia</li>
+                        </ul>
+                    </div>
+                    <div class="main-options">
+                        <h4>Need to be sure</h4>
+                        <ul>
+                            <li>There are many varia</li>
+                            <li>Need to be sure</li>
+                            <li>Combined with</li>
+                            <li>There are many varia</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="getResult">
+        <div class="container">
+            <div class="content-result">
+                <div class="result-items">
+                    <div class="number-resul">
+                        <img src="assets/image/icon-result.svg">
+                        2800
+                        <i class="fa fa-plus" aria-hidden="true"></i>
+                    </div>
+                    <h4>Active Clients</h4>
+                    <p>We are Connected All Time to Help Your Business.</p>
+                </div>
+                <div class="result-items">
+                    <div class="number-resul">
+                        <img src="assets/image/icon-result.svg">
+                        1670
+                        <i class="fa fa-plus" aria-hidden="true"></i>
+                    </div>
+                    <h4>5 Star Reviws</h4>
+                    <p>We are Connected All Time to Help Your Business.</p>
+                </div>
+                <div class="result-items">
+                    <div class="number-resul">
+                        <img src="assets/image/icon-result.svg">
+                        160
+                        <i class="fa fa-plus" aria-hidden="true"></i>
+                    </div>
+                    <h4>team Membres</h4>
+                    <p>We are Connected All Time to Help Your Business.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -337,11 +424,11 @@
       var swiper = new Swiper(".mySwiper", {
         slidesPerView: 1,
         spaceBetween: 0,
-        autoplay: {
+        /*autoplay: {
           delay: 2000,
           pauseOnMouseEnter: true,
           disableOnInteraction: false,
-        },
+        },*/
         pagination: {
           el: ".swiper-pagination",
           clickable: true,
