Correção posicionamneto paginação slide Get

--- a/Index.html
+++ b/Index.html
@@ -55,7 +55,11 @@
           object-fit: cover;
         }
         .swiper-pagination {
-            margin-bottom: -50px;
+            margin-top: -50px;
+        }
+
+        .swiper-pagination-bullets.swiper-pagination-horizontal {
+            bottom: 100px;
         }
       </style>
 
