--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div id="menuNav">
                 <nav>
                     <ul>
-                        <li class="active"><a href="#">Home</a></li>
+                        <li class="active"><a href="#">Inicial</a></li>
                         <li><a href="#aboutUs">About Us</a></li>
                         <li><a href="#">services</a></li>
                         <li><a href="#projects">Project</a></li>
